--- a/style/css/404.css
+++ b/style/css/404.css
@@ -35,7 +35,7 @@ p {
     margin-bottom: 40px;
 }
 
-a {
+.main a {
     color: #fff;
     background-color: #007bff;
     border: 2px solid #007bff;
@@ -45,8 +45,24 @@ a {
     transition: background-color 0.3s ease;
 }
 
-a:hover {
+.main a:hover {
     background-color: #0064ff;
+}
+
+.footer {
+    position: absolute;
+    bottom: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 12px;
+    opacity: .4;
+    font-weight: 100;
+}
+
+.footer a {
+    color: #333333;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
 }
 
 .unselectable {
